--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "react-scripts": "4.0.3",
         "react-uuid": "^1.0.2",
         "styled-components": "^5.3.0",
+        "styled-icons": "^10.37.0",
         "sweetalert2": "^11.1.2",
         "web-vitals": "^1.0.1"
     },
